--- a/css/exhibitions.css
+++ b/css/exhibitions.css
@@ -1,3 +1,6 @@
+/*THIS FILE IS THE DEFULT STYLING FOR EXPLORE.HTML AND SPECIAL-EVENTS.HTML,
+AND MAIN STYLING FOR EXHIBITIONS.HTML  */
+
 @media (min-width: 860px) {
   /* SIZING OF GALLERY CARD */
   .gallery__card--cosmology {
@@ -29,7 +32,7 @@
     padding: 50px 20px;
     display: grid;
     grid-auto-flow: dense;
-    grid-gap: 50px;
+    grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(150px, 0.5fr));
     grid-auto-rows: 150px;
   }
@@ -37,8 +40,31 @@
   /* TOGGLE ON OF FUNCTION ./SCRIPT.JS */
   .gallery_card--expand {
     grid-column: span 5;
-    grid-row: span 5;
+    grid-row: span 6;
   }
+}
+
+.body--exhibitions {
+  background-color: #2d93ad;
+}
+
+.title__section {
+  padding: 10vw 0 5vw 0;
+}
+
+.title__image__container {
+  background-image: url(../images/exhibition-1863344_1920.jpg);
+  height: calc(50px + 20vw);
+  background-size: 100%;
+  background-position: top;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+.title__h1__container {
+  padding-top: 5vw;
+  display: flex;
+  font-size: var(--defult-h1-size);
+  justify-content: center;
 }
 
 .gallery__card {
@@ -51,7 +77,7 @@
 
 .gallery__overlay {
   position: absolute;
-  background-color: #fafafaf1;
+  background-color: var(--gallery-card-clr);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -76,13 +102,15 @@
   transition: all 0.5s ease;
 }
 
-.gallery__card:hover img {
+/* Change this */
+
+/* .gallery__card:hover img {
   transform: scale(1.3);
-}
+} */
 
 .overlay__details {
   text-align: center;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 
 .overlay__title {
