--- a/css/footer.css
+++ b/css/footer.css
@@ -1,50 +1,89 @@
 .footer__container {
   display: flex;
-  background-color: lightgray;
+  background-color: var(--footer-clr);
   flex-direction: column;
 }
-
 .footer__top__container {
-  background-color: lightgreen;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
-
 .footer__all-links {
   display: flex;
   flex-direction: row;
-  background-color: lightblue;
-  transition: var(--defult-transition);
   display: flex;
   flex-wrap: wrap;
   max-width: 270px;
+  text-decoration: none;
 }
-
+.footer__contact-details {
+  padding: 10px;
+}
+.footer__contact-details li {
+  padding: 5px;
+  font-size: 1.3rem;
+  border-bottom: 1px solid black;
+}
+.footer__contact-details li:hover {
+  scale: 1.05;
+}
 .footer__sosial-links {
-  background-color: lightcoral;
   flex-direction: row;
+  justify-content: center;
+  padding-top: 10px;
 }
-
+.footer__page-links {
+  border-top: 1px solid black;
+}
 .footer__all-links a {
   margin: 0.5rem;
+  text-decoration: none;
   font-size: 1.5rem;
-  transition: var(--defult-transition);
 }
 .footer__all-links a:hover {
-  transform: scale(1.3);
+  transform: scale(1.05);
+  text-decoration: underline;
+  color: black;
 }
-
-.footer__links-and-newsletter__container {
+.footer__newsletter form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 10px;
 }
-
+.footer__newsletter input {
+  outline: none;
+  background-color: rgba(230, 230, 230, 0);
+  border-radius: 20px;
+  font-size: 1.2rem;
+  border: 1px solid black;
+  text-align: center;
+}
+.footer__newsletter input:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.footer__newsletter #email:focus {
+  background-color: var(--white);
+}
+.footer__newsletter #submit:focus {
+  background-color: var(--btn-active);
+}
+.footer__newsletter #email {
+  height: 30px;
+}
+.footer__newsletter #submit {
+  width: 50%;
+  margin-top: 5px;
+}
 .footer__newsletter label {
   display: flex;
   flex-direction: column;
+  padding: 0.5rem 0 5px 0;
+  font-size: 1.3rem;
+  font-weight: 600;
 }
-
-.footer__low__container {
-  background-color: lightslategray;
-}
-.footer__partners {
+.footer__copyright {
+  display: flex;
+  justify-content: center;
 }
