--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
     rgba(19, 50, 117, 0.73),
     rgba(245, 246, 252, 0.52)
   );
+  --box-shadow: rgba(100, 100, 111, 1) 0px 7px 29px 0px;
   /* ANIMATION VARIABLES */
   --defult-transition: all 0.44s ease;
 }
@@ -103,52 +104,69 @@ a:visited {
   mix-blend-mode: color-burn; */
 }
 /* //////////////////////////////////////////////////// */
+
+.intro__item {
+  position: relative;
+  background-color: #d7d7d8;
+  overflow: hidden;
+  max-height: 450px;
+  transition: var(--defult-transition);
+}
+@media (min-width: 860px) {
+  .intro__container {
+    opacity: 1;
+    display: grid;
+    height: 100vw;
+    /* grid-auto-flow: dense; */
+    justify-content: center;
+    width: 60vw;
+    min-width: 320px;
+    grid-gap: 20px;
+    grid-template-columns: repeat(10, minmax(10px, 1fr));
+    /* grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr)); */
+    grid-template-rows: repeat(auto-fill, 3vw);
+    grid-auto-rows: 10px;
+    grid-auto-flow: row;
+  }
+  .intro__text {
+    font-size: clamp(14px, 1.5vw, 35px);
+    background: none;
+  }
+  .intro__item {
+    overflow: visible;
+  }
+}
 .intro__section {
   display: flex;
   justify-content: center;
   padding-top: 200px;
 }
 
-.intro__container {
-  opacity: 1;
-  display: grid;
-  height: 4000px;
-  /* grid-auto-flow: dense; */
-  justify-content: center;
-  width: 60vw;
-  min-width: 320px;
-  grid-gap: 1vw;
-  grid-template-columns: repeat(10, minmax(10px, 1fr));
-  /* grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr)); */
-  grid-template-rows: repeat(auto-fill, 5vw);
-  grid-auto-rows: 10px;
-  grid-auto-flow: row;
-}
 .intro__item {
   /* background-color: lightsteelblue; */
   /* box-shadow: rgba(100, 100, 111, 1) 0px 7px 29px 0px; */
 }
 .intro__text {
   /* background-color: lightsteelblue; */
-  font-size: 2vw;
+  /* font-size: var(--defult-a-size); */
   border-radius: 5px;
   padding: 1rem;
+  min-height: 200px;
   /* overflow: hidden; */
 }
 .intro__text p {
   /* background-color: rgba(211, 211, 211, 0.2); */
   font-weight: 600;
 }
-.intro__image img {
-  overflow: hidden;
-  transition: var(--defult-transition);
-}
+
 .intro__image img:hover {
   scale: 1.025;
   filter: brightness(1);
-  box-shadow: rgba(100, 100, 111, 1) 0px 7px 29px 0px;
+  box-shadow: var(--box-shadow);
 }
 .intro__image img {
+  overflow: hidden;
+  transition: var(--defult-transition);
   width: 100%;
   height: 100%;
   max-height: 100%;
@@ -280,30 +298,31 @@ a:visited {
 }
 
 .page-nav__frame {
-  background-color: lightblue;
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 5vw;
-  padding: 5rem 0;
+  padding: 5vw 0;
   flex-wrap: wrap;
 }
 
 .page-nav__card {
   display: flex;
   justify-content: center;
-  padding: calc(160px + 7vw) 0;
-  width: calc(220px + 10vw);
+  padding: calc(100px + 7vw) 0;
+  width: calc(150px + 10vw);
   background-size: cover;
   background-repeat: no-repeat;
   background-blend-mode: multiply;
   transition: var(--defult-transition);
   color: var(--white);
+}
+.page-nav__card h2 {
   font-size: var(--defult-h2-size);
 }
-
 .page-nav__card:hover {
-  /* filter: blur(5px); */
+  scale: 1.05;
+  box-shadow: var(--box-shadow);
 }
 
 .page-nav__card--explore {
